@@ -8,6 +8,8 @@ Version 10.30.02 - Mon Jul 10 14:04:27 UTC 2017
 * Add `RegexReplace::setReplaceCounter()`.
 * Add additional parameter `size_t* counter` to `MatchEvaluator::replace()` and `MatchEvaluator::nreplace()`
 * Optimize ModifierTable
+* Explicit bit size to the selector is deprecated
+* ConvInt and ConvUTF (including Convert16 and Convert32) is deprecated
 
 Version 10.30.01 - Sat Mar 11 00:08:52 UTC 2017
 -----------------------------------------------
